<resources>
    <string name="app_name">ProyectoDSM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="titulo_del_producto">Titulo del producto</string>
    <string name="olivia_cartagena">Olivia Cartagena</string>
    <string name="amelia_montero">Amelia Montero</string>
    <string name="_12_septiembre_2020">12 septiembre 2020</string>
    <string name="letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including">Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="comentarios">Comentarios</string>
    <string name="precio_100_00">Precio: $100.00</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the</string>
    <string name="todo">TODO</string>
    <string name="_02_enero_2020">02 enero 2020</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including">Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including</string>
    <string name="titulo_historial">Historial De Compras</string>
    <string name="fechacompra">Mes de Compra</string>
    <string name="precioprod">$20.00</string>
    <string name="fechacompraprod">Feb 28, 2020</string>
    <string name="fechacompraprod2">30 Agosto 2020</string>
    <string name="fechacompraprod3">22 Abril 2021</string>
    <string name="fechacompraprod4">Feb 6, 2020</string>
</resources>